# svgclock-rs

./: .gitignore  .gitmodules  Cargo.toml  build.md  build.rs  build_x86_64-pc-windows-gnu.sh  license.txt  readme.md  readme_ja.md  rustfmt.toml  svgclock-rs.desktop  versioninfo.rc
src/: lib.rs  main.rs  minitemplate.rs
tests/: minitemplate_test.rs
