[package]
name = "svgclock-rs"
version = "0.1.0"
edition = "2024"

license = "MIT OR Apache-2.0"
description = """\
svgclock-rs is a clock, using svg image. \
"""
homepage = "https://github.com/zuntan/svgclock-rs/"
repository = "https://github.com/zuntan/svgclock-rs/"
authors = [ "zuntan <jun_n@momo.so-net.ne.jp>" ]

[dependencies]
log = "0.4.27"
pretty_env_logger = "0.5.0"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.2"
once_cell = "1.21.3"
chrono = "0.4.41"
chrono-tz = "0.10.4"
linked-hash-map = "0.5.6"
strum = { version = "0.27.2", features = ["derive"] }

gtk = { version = "~0.18.2" }
gdk = { version = "~0.18.2" }
cairo-rs = { version = "~0.18.2", features = [ "png", "svg", "pdf" ] }
cairo-sys-rs = { version = "~0.18.2", features = [ "png", "svg", "pdf" ] }
gio = "~0.18.2"
glib = "~0.18.2"

# dependencies cairo-rs 0.18.2
librsvg = "~2.57.3"

quick-xml = "0.38.3"
glam = "0.30.5"
tween = "2.1.0"
# clap = { version = "4.5.47", features = ["derive"] }

[profile.release]
# lto = false
lto = true

# opt-level = "s"
opt-level = 3

# codegen-units = 16
codegen-units = 1

# panic = "unwind"
panic = "abort"

strip = "symbols"


[package.metadata.deb]
copyright = "Copyright © 2025 zuntan <jun_n@momo.so-net.ne.jp>"
section = "utils"

assets = [
    ["target/release/svgclock-rs",  "usr/bin/", "755"],
    ["svgclock-rs.desktop",         "usr/share/applications/", "644"],
    ["logo128.png",                 "usr/share/icons/hicolor/128x128/apps/svgclock-rs.png", "644"],
    ["logo48.png",                  "usr/share/icons/hicolor/48x48/apps/svgclock-rs.png", "644"],
    ["clock_theme_*svg",            "usr/share/svgclock-rs/theme/", "644"],
]